--- a/index.html
+++ b/index.html
@@ -424,6 +424,122 @@
             }
             .drive-controls { bottom: 20px; left: 8px; }
         }
+
+        /* ====== Photo Capture Modal ====== */
+        .modal-overlay {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background: rgba(0,0,0,0.7); z-index: 3000;
+            display: none; justify-content: center; align-items: center;
+            backdrop-filter: blur(4px);
+        }
+        .modal-overlay.show { display: flex; }
+        .modal-box {
+            background: #fff; border-radius: 16px; padding: 24px;
+            width: 90%; max-width: 420px; max-height: 85vh; overflow-y: auto;
+            direction: rtl; font-family: 'Segoe UI', Tahoma, Arial, sans-serif;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.4);
+        }
+        .modal-box h2 { font-size: 18px; margin-bottom: 14px; }
+        .photo-preview {
+            width: 100%; max-height: 200px; object-fit: cover;
+            border-radius: 10px; margin-bottom: 12px; display: none; border: 2px solid #eee;
+        }
+        .photo-input-area {
+            border: 2px dashed #3498db; border-radius: 12px; padding: 24px;
+            text-align: center; cursor: pointer; margin-bottom: 12px; transition: background 0.2s;
+        }
+        .photo-input-area:hover { background: #f0f8ff; }
+        .photo-input-area .photo-icon { font-size: 40px; }
+        .photo-input-area p { font-size: 14px; color: #555; margin-top: 8px; }
+        .form-group { margin-bottom: 12px; }
+        .form-group label { display: block; font-size: 13px; font-weight: 600; color: #333; margin-bottom: 4px; }
+        .form-group input, .form-group textarea, .form-group select {
+            width: 100%; padding: 10px 12px; border: 1px solid #ddd; border-radius: 8px;
+            font-size: 14px; direction: rtl; font-family: inherit;
+        }
+        .form-group textarea { resize: vertical; min-height: 60px; }
+        .gps-badge {
+            display: inline-flex; align-items: center; gap: 4px;
+            padding: 4px 10px; border-radius: 20px; font-size: 12px; font-weight: 600; margin-bottom: 8px;
+        }
+        .gps-badge.found { background: #d4edda; color: #155724; }
+        .gps-badge.not-found { background: #fff3cd; color: #856404; }
+        .gps-badge.manual { background: #d1ecf1; color: #0c5460; }
+        .btn-submit-report {
+            width: 100%; padding: 12px; background: #3498db; color: #fff; border: none;
+            border-radius: 10px; font-size: 15px; font-weight: 700; cursor: pointer;
+        }
+        .btn-submit-report:hover { background: #2980b9; }
+        .btn-submit-report:disabled { background: #bdc3c7; cursor: not-allowed; }
+
+        /* ====== Reports Panel ====== */
+        .reports-panel {
+            position: fixed; top: 0; right: 0; bottom: 0;
+            width: 380px; max-width: 95vw; background: #fff; z-index: 2500;
+            box-shadow: -5px 0 30px rgba(0,0,0,0.3); transform: translateX(100%);
+            transition: transform 0.3s ease; display: flex; flex-direction: column;
+            direction: rtl; font-family: 'Segoe UI', Tahoma, Arial, sans-serif;
+        }
+        .reports-panel.open { transform: translateX(0); }
+        .reports-header {
+            padding: 16px 20px; border-bottom: 1px solid #eee;
+            display: flex; align-items: center; justify-content: space-between; background: #f8f9fa;
+        }
+        .reports-header h2 { font-size: 16px; margin: 0; }
+        .reports-close { background: none; border: none; font-size: 22px; cursor: pointer; color: #666; }
+        .reports-list { flex: 1; overflow-y: auto; padding: 12px; }
+        .report-card {
+            border: 1px solid #eee; border-radius: 12px; padding: 12px; margin-bottom: 10px;
+        }
+        .report-card:hover { box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        .report-card-header {
+            display: flex; align-items: center; justify-content: space-between; margin-bottom: 8px;
+        }
+        .report-card-street { font-weight: 700; font-size: 14px; }
+        .report-status-badge {
+            padding: 2px 8px; border-radius: 12px; font-size: 11px; font-weight: 600;
+        }
+        .report-status-badge.pending { background: #fff3cd; color: #856404; }
+        .report-status-badge.decoded { background: #d4edda; color: #155724; }
+        .report-status-badge.rejected { background: #f8d7da; color: #721c24; }
+        .report-card-photo {
+            width: 100%; height: 120px; object-fit: cover; border-radius: 8px; margin-bottom: 8px; cursor: pointer;
+        }
+        .report-card-meta { font-size: 12px; color: #888; margin-bottom: 6px; }
+        .report-card-actions { display: flex; gap: 6px; flex-wrap: wrap; }
+        .report-action-btn {
+            padding: 4px 10px; border: 1px solid #ddd; border-radius: 6px;
+            font-size: 12px; cursor: pointer; background: #fff;
+        }
+        .report-action-btn:hover { background: #f0f0f0; }
+        .report-action-btn.danger { color: #e74c3c; border-color: #e74c3c; }
+        .report-action-btn.primary { color: #3498db; border-color: #3498db; }
+        .reports-empty { text-align: center; padding: 40px 20px; color: #aaa; }
+        .reports-empty .empty-icon { font-size: 48px; margin-bottom: 12px; }
+        .decode-form {
+            margin-top: 8px; padding: 10px; background: #f8f9fa; border-radius: 8px; font-size: 13px;
+        }
+        .decode-form label { display: block; font-size: 12px; font-weight: 600; margin-bottom: 2px; margin-top: 6px; }
+        .decode-form input {
+            width: 100%; padding: 6px 8px; border: 1px solid #ddd; border-radius: 6px;
+            font-size: 13px; direction: ltr;
+        }
+        .decode-form .decode-help { font-size: 11px; color: #888; margin-bottom: 6px; }
+        .decode-actions { display: flex; gap: 6px; margin-top: 8px; }
+
+        /* ====== Sign verification badge in popup ====== */
+        .sign-badge {
+            display: flex; align-items: center; gap: 6px;
+            padding: 6px 10px; border-radius: 8px; font-size: 12px; margin-top: 8px;
+        }
+        .sign-badge.verified { background: #d4edda; color: #155724; border: 1px solid #c3e6cb; }
+        .sign-badge.not-verified { background: #f8f9fa; color: #666; border: 1px solid #eee; }
+        .popup-report-btn {
+            display: block; width: 100%; padding: 6px 10px; margin-top: 6px;
+            background: #f8f9fa; border: 1px solid #ddd; border-radius: 8px;
+            font-size: 12px; cursor: pointer; text-align: center;
+        }
+        .popup-report-btn:hover { background: #e9ecef; }
     </style>
 </head>
 <body>
@@ -519,10 +635,51 @@
         <button class="drive-btn" id="btnGps" title="מיקום GPS">📍</button>
         <button class="drive-btn" id="btnVoice" title="התראות קוליות">🔇</button>
         <button class="drive-btn" id="btnDrive" title="מצב נהיגה">🚗</button>
+        <button class="drive-btn" id="btnPhoto" title="צלם שלט נתצ">🪧</button>
+        <button class="drive-btn" id="btnReports" title="דיווחי שלטים">📋</button>
+    </div>
+
+    <!-- Photo Capture Modal -->
+    <div class="modal-overlay" id="photoModal">
+        <div class="modal-box">
+            <h2>🪧 דיווח שלט נת"צ</h2>
+            <p style="font-size: 13px; color: #666; margin-bottom: 12px;">צלם את השלט של שעות הנת"צ. המיקום יזוהה אוטומטית מהתמונה.</p>
+            <div class="photo-input-area" id="photoInputArea">
+                <div class="photo-icon">🪧</div>
+                <p>לחץ לצילום או בחירת תמונה</p>
+                <input type="file" accept="image/*" capture="environment" id="photoFileInput" style="display:none">
+            </div>
+            <img class="photo-preview" id="photoPreview">
+            <div id="gpsStatus"></div>
+            <div class="form-group">
+                <label>שם רחוב</label>
+                <input type="text" id="reportStreet" placeholder="יזוהה אוטומטית לפי מיקום...">
+            </div>
+            <div class="form-group">
+                <label>קטע / תיאור</label>
+                <input type="text" id="reportSection" placeholder="למשל: מרחוב X עד רחוב Y">
+            </div>
+            <div class="form-group">
+                <label>הערות</label>
+                <textarea id="reportNotes" placeholder="תיאור חופשי של מה שכתוב על השלט..."></textarea>
+            </div>
+            <button class="btn-submit-report" id="btnSubmitReport" disabled>שלח דיווח</button>
+            <button style="width:100%; padding:10px; margin-top:8px; background:none; border:1px solid #ddd; border-radius:10px; font-size:14px; cursor:pointer;" id="btnCancelReport">ביטול</button>
+        </div>
+    </div>
+
+    <!-- Reports Viewer Panel -->
+    <div class="reports-panel" id="reportsPanel">
+        <div class="reports-header">
+            <h2>📋 דיווחי שלטים</h2>
+            <button class="reports-close" id="btnCloseReports">✕</button>
+        </div>
+        <div class="reports-list" id="reportsList"></div>
     </div>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="bus_lane_hours.js?v=4"></script>
-    <script src="app.js?v=4"></script>
+    <script src="bus_lane_hours.js?v=5"></script>
+    <script src="community_reports.js?v=5"></script>
+    <script src="app.js?v=5"></script>
 </body>
 </html>
