--- a/index.html
+++ b/index.html
@@ -113,42 +113,7 @@
             color: #666;
         }
 
-        /* Legend panel */
-        .legend-panel {
-            position: absolute;
-            bottom: 30px;
-            right: 10px;
-            z-index: 1000;
-            background: rgba(255, 255, 255, 0.95);
-            border-radius: 10px;
-            padding: 14px 18px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-            font-size: 13px;
-            backdrop-filter: blur(10px);
-        }
 
-        .legend-panel h3 {
-            margin-bottom: 10px;
-            font-size: 14px;
-            color: #333;
-        }
-
-        .legend-item {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            margin-bottom: 6px;
-        }
-
-        .legend-line {
-            width: 30px;
-            height: 5px;
-            border-radius: 3px;
-        }
-
-        .legend-line.red { background: #e74c3c; }
-        .legend-line.green { background: #2ecc71; }
-        .legend-line.gray { background: #95a5a6; }
 
         /* Loading overlay */
         .loading-overlay {
@@ -268,38 +233,7 @@
             transform: scale(1.2);
         }
 
-        .legend-camera-icon {
-            width: 20px;
-            height: 20px;
-            background: #2c3e50;
-            border: 2px solid #fff;
-            border-radius: 50%;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 10px;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.3);
-        }
 
-        .legend-toggle {
-            display: flex;
-            align-items: center;
-            gap: 6px;
-            margin-top: 8px;
-            padding-top: 8px;
-            border-top: 1px solid #eee;
-        }
-
-        .legend-toggle input[type="checkbox"] {
-            width: 16px;
-            height: 16px;
-            cursor: pointer;
-        }
-
-        .legend-toggle label {
-            cursor: pointer;
-            user-select: none;
-        }
 
         @media (max-width: 768px) {
             .info-bar {
@@ -319,12 +253,6 @@
                 display: none;
             }
 
-            .legend-panel {
-                bottom: 10px;
-                right: 10px;
-                font-size: 12px;
-                padding: 10px 14px;
-            }
         }
 
         /* ====== Driving mode controls ====== */
@@ -413,7 +341,6 @@
 
         /* Driving mode fullscreen style */
         body.driving-mode .info-bar { display: none; }
-        body.driving-mode .legend-panel { display: none; }
         body.driving-mode .drive-controls { bottom: 40px; }
 
         @media (max-width: 768px) {
@@ -584,43 +511,14 @@
                     <div class="status-label">ללא שעות</div>
                 </div>
             </div>
-            <div class="status-item">
+            <div class="status-item" style="cursor:pointer;" onclick="document.getElementById('toggleCameras').click()">
                 <div class="status-dot" style="background: #2c3e50; font-size: 8px; display: flex; align-items: center; justify-content: center;">📷</div>
                 <div>
                     <div class="status-count" id="cameraCount">-</div>
                     <div class="status-label">מצלמות</div>
                 </div>
+                <input type="checkbox" id="toggleCameras" checked style="width:14px;height:14px;cursor:pointer;" onclick="event.stopPropagation()">
             </div>
-        </div>
-    </div>
-
-    <!-- Legend panel -->
-    <div class="legend-panel">
-        <h3>מקרא</h3>
-        <div class="legend-item">
-            <div class="legend-line red"></div>
-            <span>חסום לרכב פרטי כעת</span>
-        </div>
-        <div class="legend-item">
-            <div class="legend-line green"></div>
-            <span>פתוח לרכב פרטי כעת</span>
-        </div>
-        <div class="legend-item">
-            <div class="legend-line gray"></div>
-            <span>נתצ קבוע (חסום תמיד) / ללא מידע שעות</span>
-        </div>
-        <div class="legend-item">
-            <div class="legend-camera-icon">📷</div>
-            <span>מצלמת נת"צ</span>
-        </div>
-        <div class="legend-toggle">
-            <input type="checkbox" id="toggleCameras" checked>
-            <label for="toggleCameras">הצג מצלמות</label>
-        </div>
-        <div style="margin-top: 10px; font-size: 11px; color: #888;">
-            מקור: GIS עיריית תל אביב-יפו<br>
-            שכבה 611 – נתיבי תחבורה ציבורית<br>
-            שכבה 949 – מצלמות נת"צ
         </div>
     </div>
 
