--- a/index.html
+++ b/index.html
@@ -597,18 +597,42 @@
         </div>
     </div>
 
+    <!-- Camera Direction Report Modal -->
+    <div class="modal-overlay" id="cameraReportModal">
+        <div class="modal-box">
+            <h2>📷 דיווח כיוון מצלמה</h2>
+            <p style="font-size: 13px; color: #666; margin-bottom: 12px;">מצלמה זו סווגה לשני כיוונים. צלם את המצלמה כדי שנוכל לקבוע לאיזה כיוון היא מכוונת.</p>
+            <div id="camReportInfo" style="padding:8px 12px; background:#f8f9fa; border-radius:8px; margin-bottom:12px; font-size:13px; line-height:1.5;"></div>
+            <div class="form-group">
+                <label>הערות</label>
+                <textarea id="camReportNotes" placeholder="לאיזה כיוון המצלמה מכוונת? פרטים נוספים..."></textarea>
+            </div>
+            <div class="form-group">
+                <label>📷 צלם את המצלמה</label>
+                <div class="photo-input-area" id="camPhotoInputArea" style="padding: 12px;">
+                    <div class="photo-icon" style="font-size: 28px;">📷</div>
+                    <p style="margin: 4px 0 0; font-size: 13px;">לחץ לצילום המצלמה</p>
+                    <input type="file" accept="image/*" capture="environment" id="camPhotoFileInput" style="display:none">
+                </div>
+                <img class="photo-preview" id="camPhotoPreview">
+            </div>
+            <button class="btn-submit-report" id="btnSubmitCamReport">שלח דיווח</button>
+            <button style="width:100%; padding:10px; margin-top:8px; background:none; border:1px solid #ddd; border-radius:10px; font-size:14px; cursor:pointer;" id="btnCancelCamReport">ביטול</button>
+        </div>
+    </div>
+
     <!-- Reports Viewer Panel -->
     <div class="reports-panel" id="reportsPanel">
         <div class="reports-header">
-            <h2>📋 דיווחי שלטים</h2>
+            <h2>📋 דיווחים</h2>
             <button class="reports-close" id="btnCloseReports">✕</button>
         </div>
         <div class="reports-list" id="reportsList"></div>
     </div>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="bus_lane_hours.js?v=8"></script>
-    <script src="community_reports.js?v=8"></script>
-    <script src="app.js?v=8"></script>
+    <script src="bus_lane_hours.js?v=9"></script>
+    <script src="community_reports.js?v=9"></script>
+    <script src="app.js?v=9"></script>
 </body>
 </html>
