v17: Fix critical simPlanning=true init bug + robust click handling
- simPlanning was initialized to true, causing renderLanes() to skip
  binding popups on ALL polylines even before simulator was opened.
  Fixed to false.
- renderLanes() popup guard now checks both simActive AND simPlanning.
- Added direct click handlers on polylines as fallback during planning
  (in case map click bubbling doesn't work on some browsers).
- clearSimRoute() now calls enterSimPlanning() properly.
- _restoreLanePopups() also cleans up direct click handlers.
- Updated HTML labels to match new click-anywhere instructions.
- SW cache v17

--- a/index.html
+++ b/index.html
@@ -696,9 +696,9 @@
             <h3>🎮 סימולטור נסיעה</h3>
             <button class="sim-close" id="simClose">✕</button>
         </div>
-        <div class="sim-phase-label" id="simPhaseLabel">שלב תכנון — לחץ על מקטעים במפה</div>
+        <div class="sim-phase-label" id="simPhaseLabel">שלב תכנון — לחץ בכל מקום על המפה</div>
         <div class="sim-route-list" id="simRouteList">
-            <div class="sim-empty">לחץ על נתיבים במפה כדי לבנות מסלול</div>
+            <div class="sim-empty">לחץ בכל מקום על המפה כדי לבנות מסלול</div>
         </div>
         <div class="sim-controls">
             <button class="sim-btn primary" id="simStartBtn" disabled>▶ התחל נסיעה</button>
