v18: Add direction arrows to simulator route segments
- Each bus lane segment shows direction arrow (⬆️⬇️⬅️➡️↗️↙️ etc) in route list
- Direction computed from direction_name attribute, or from geometry if null
- Arrow markers placed along segments on map every ~100m
- Local bearing calculated per arrow for curves
- Route list shows direction label (כיוון: N/S/E/W)
- CSS for arrow icons (orange, transparent background)
- SW cache v18

--- a/index.html
+++ b/index.html
@@ -479,6 +479,9 @@
         }
         /* Highlight polylines in sim planning mode */
         .sim-planning .leaflet-interactive { cursor: crosshair !important; }
+        .seg-dir { font-size: 10px; color: #999; margin-top: 1px; }
+        .sim-arrow-icon { background: none !important; border: none !important; }
+        .sim-arrow-icon div { color: #e67e22; text-shadow: 0 0 3px rgba(0,0,0,0.5); }
 
         @media (max-width: 768px) {
             .sim-panel { width: 260px; top: 60px; }
