v19: Fix arrow directions for Israel driving + OSRM road routing for connections
- direction_name is now the authoritative source for traffic direction
- 18% of segments had geometry going opposite to direction_name - now detected
  and corrected via isGeometryReversed()
- getFeaturePointsInTrafficOrder() returns [lat,lng] in driving direction
- Arrows on map now correctly show Israel right-side driving direction
- Connections between route segments now use OSRM road routing API
  instead of straight lines through buildings
- buildSimPath() uses traffic-ordered points + OSRM connector paths
  so the simulator car follows actual roads through junctions
- SW cache v19

--- a/index.html
+++ b/index.html
@@ -482,6 +482,14 @@
         .seg-dir { font-size: 10px; color: #999; margin-top: 1px; }
         .sim-arrow-icon { background: none !important; border: none !important; }
         .sim-arrow-icon div { color: #e67e22; text-shadow: 0 0 3px rgba(0,0,0,0.5); }
+        .lane-arrow-icon { background: none !important; border: none !important; }
+        .lane-arrow-icon div {
+            font-size: 12px;
+            line-height: 1;
+            color: #fff;
+            text-shadow: 0 0 4px rgba(0,0,0,0.7);
+            transform-origin: center center;
+        }
 
         @media (max-width: 768px) {
             .sim-panel { width: 260px; top: 60px; }
